--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -18,7 +18,8 @@
 	}
 }
 
-div.header-background {
+.header-background {
+	z-index: 0;
 	position: relative;
 	margin: 0 auto;
 	
@@ -29,6 +30,7 @@ div.header-background {
 	}
 
 	.logo-header {
+		z-index: -1;
 		position: fixed;
 		top: 50%;
 		left: 50%;
@@ -47,6 +49,7 @@ div.header-background {
 
 	.panah {
 		position: fixed;
+		z-index: -1;
 		bottom: 20px;
 		left: 50%;
 		-webkit-transform: translate(-50%, 0);
@@ -87,14 +90,23 @@ div.header-background {
 
 	@media #{$small-only} {
 		.logo-header {
-			position: fixed;
+			position: absolute;
 			top: 100px;
 			bottom: 0;
 			left: 40px;
 			right: 40px;
+			-webkit-transform: translate(0, 0);
+			-ms-transform: translate(0, 0);
+			-o-transform: translate(0, 0);
+			transform: translate(0, 0);
 			p {
-				margin: 60px 30px 0;
+				margin: 60px 15px 0;
+				font-size: 18px;
 			}
+		}
+
+		.panah {
+			position: absolute;
 		}
 	}
 }
